--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -7,45 +7,81 @@
   </div>
 </div>
 
-<.header user={@current_user} />
+<div class="flex min-h-screen flex-col">
+  <.header user={@current_user} />
 
-<div class="h-[calc(100dvh-theme(space.64))] relative mx-auto flex max-w-screen-xl flex-col justify-center gap-8 overflow-hidden p-4">
-  <h1 class="text-5xl font-semibold leading-tight dark:text-white md:text-6xl">
-    Unlock Unforgettable Experiences
-  </h1>
-  <p class="max-w-xl text-xl font-light text-zinc-800 dark:text-zinc-200">
-    We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
-  </p>
-  <div class="flex items-center gap-8 font-medium">
-    <.link
-      :if={FunWithFlags.enabled?(:get_started_button)}
-      class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline"
-    >
-      Get started
-    </.link>
-    <.link
-      :if={FunWithFlags.enabled?(:why_choose_button)}
-      class="hover:underline dark:text-zinc-100"
-    >
-      Why choose <span class="font-black italic text-zinc-700 dark:text-zinc-200">GiTS</span>?
-    </.link>
+  <div class="relative grid gap-8 p-4 pt-8 text-center lg:pt-40">
+    <h1 class="text-5xl font-semibold leading-tight dark:text-white md:text-6xl">
+      Unlock Unforgettable Experiences
+    </h1>
+    <p class="mx-auto max-w-xl text-xl font-light text-zinc-800 dark:text-zinc-200">
+      We offer better security, faster check-in, and lower costs. Whether it’s concerts, conferences, festivals, or sports events, we’ve got you covered.
+    </p>
+    <div class="mx-auto flex items-center justify-center gap-8 font-medium">
+      <.link
+        :if={FunWithFlags.enabled?(:get_started_button)}
+        class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline"
+      >
+        Get started
+      </.link>
+      <.link
+        :if={FunWithFlags.enabled?(:why_choose_button)}
+        class="hover:underline dark:text-zinc-100"
+      >
+        Why choose <span class="font-black italic text-zinc-700 dark:text-zinc-200">GiTS</span>?
+      </.link>
+    </div>
   </div>
-</div>
-<div class="relative w-full bg-gradient-to-t from-white to-transparent py-8">
-  <.simple_form
-    action="/events"
-    for={%{}}
-    method="get"
-    class="mx-auto flex max-w-screen-lg items-center p-4 gap-2"
-  >
-    <input
-      name="q"
-      type="search"
-      class="bg-white/50 w-full rounded-md border-none bg-zinc-50 p-4 text-sm outline-none ring-1 ring-zinc-200 focus-visible:ring-zinc-400 dark:bg-zinc-700 dark:ring-zinc-600"
-      placeholder="Search for an event, city, etc"
-    />
-  </.simple_form>
-</div>
-<div class="relative bg-white p-6">
-  <.footer />
+
+  <div class="relative w-full bg-gradient-to-t from-white to-transparent py-8">
+    <.simple_form
+      :if={FunWithFlags.enabled?(:search_bar)}
+      action="/events"
+      for={%{}}
+      method="get"
+      class="mx-auto flex max-w-screen-lg items-center p-4 gap-2"
+    >
+      <input
+        name="q"
+        type="search"
+        class="bg-white/50 w-full rounded-md border-none bg-zinc-50 p-4 text-sm outline-none ring-1 ring-zinc-200 focus-visible:ring-zinc-400 dark:bg-zinc-700 dark:ring-zinc-600"
+        placeholder="Search for an event, city, etc"
+      />
+    </.simple_form>
+    <div class="min-h-96 mx-auto max-w-screen-lg pt-8">
+      <h2 :if={Enum.any?(@events)} class="px-4 text-xl font-medium">Coming up</h2>
+      <div class="flex gap-8 overflow-x-auto p-4">
+        <div
+          :for={event <- Enum.take(@events, 1)}
+          class="aspect-[4/5] group relative w-52 shrink-0 overflow-hidden rounded-2xl shadow-sm lg:w-56"
+        >
+          <img
+            src={Gits.Bucket.get_listing_image_path(event.account_id, event.id)}
+            alt=""
+            class="size-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-110"
+          />
+
+          <div class="size-12 absolute top-2 left-2 flex flex-col items-center justify-center rounded-xl bg-white text-zinc-800 shadow-md *:leading-4">
+            <span class="font-semibold">24</span>
+            <span class="text-xs">Aug</span>
+          </div>
+          <div class="absolute inset-x-2 bottom-2 space-y-1.5 rounded-xl bg-white p-2 px-2.5 shadow-md">
+            <span class="p0.5 line-clamp-2 text-sm font-medium"><%= event.name %></span>
+            <div class="flex items-center justify-between">
+              <span class="flex items-center gap-1 truncate text-sm">
+                <.icon name="hero-map-pin-micro" class="shrink-0" />
+                <span class="truncate">
+                  A Streetbar called desire
+                </span>
+              </span>
+              <span class="rounded-lg border p-1 px-1.5 text-sm">FREE+</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="relative grow bg-white p-6">
+    <.footer />
+  </div>
 </div>
