--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -52,7 +52,7 @@
       <h2 :if={Enum.any?(@events)} class="px-4 text-xl font-medium">Coming up</h2>
       <div class="flex gap-8 overflow-x-auto p-4">
         <div
-          :for={event <- Enum.take(@events, 1)}
+          :for={event <- @events}
           class="aspect-[4/5] group relative w-52 shrink-0 overflow-hidden rounded-2xl shadow-sm lg:w-56"
         >
           <img
@@ -62,8 +62,12 @@
           />
 
           <div class="size-12 absolute top-2 left-2 flex flex-col items-center justify-center rounded-xl bg-white text-zinc-800 shadow-md *:leading-4">
-            <span class="font-semibold">24</span>
-            <span class="text-xs">Aug</span>
+            <span class="font-semibold">
+              <%= event.starts_at |> Timex.format!("%e", :strftime) %>
+            </span>
+            <span class="text-xs">
+              <%= event.starts_at |> Timex.format!("%b", :strftime) %>
+            </span>
           </div>
           <div class="absolute inset-x-2 bottom-2 space-y-1.5 rounded-xl bg-white p-2 px-2.5 shadow-md">
             <span class="p0.5 line-clamp-2 text-sm font-medium"><%= event.name %></span>
