--- a/lib/gits_web/live/event_live/feature.html.heex
+++ b/lib/gits_web/live/event_live/feature.html.heex
@@ -1,15 +1,17 @@
-<div class="mx-auto min-h-screen w-full max-w-screen-lg items-start gap-4 space-y-4 p-2 md:flex md:gap-12 md:space-y-0 md:p-0 md:pt-20">
-  <div class="aspect-[3/2] relative shrink-0 overflow-hidden rounded-2xl md:w-96 md:rounded-3xl">
-    <div class="size-12 absolute top-2 left-2 flex shrink-0 flex-col items-center justify-center rounded-xl bg-white opacity-90 *:leading-4 md:top-4 md:left-4">
-      <span class="text-base font-semibold"><%= @starts_at_day %></span>
-      <span class="text-xs"><%= @starts_at_month %></span>
-    </div>
+<div class="min-h-96 mx-auto w-full max-w-2xl items-start gap-4 space-y-4 p-2 md:gap-12 md:pt-20 lg:flex lg:max-w-screen-lg lg:space-y-0 lg:p-0">
+  <div class="grid gap-2">
+    <div class="aspect-[3/2] relative mx-auto shrink-0 overflow-hidden rounded-2xl md:w-96 md:rounded-3xl">
+      <div class="size-12 border-zinc-200/40 text-white/80 bg-black/20 absolute top-2 left-2 flex shrink-0 flex-col items-center justify-center rounded-xl border *:leading-4 md:top-4 md:left-4">
+        <span class="text-base font-semibold"><%= @starts_at_day %></span>
+        <span class="text-xs"><%= @starts_at_month %></span>
+      </div>
 
-    <img
-      src={@feature_image}
-      alt="Event's featured image"
-      class="size-full object-cover transition-transform duration-300 hover:scale-110"
-    />
+      <img
+        src={@feature_image}
+        alt="Event's featured image"
+        class="size-full object-cover transition-transform duration-300 hover:scale-110"
+      />
+    </div>
   </div>
   <div class="grid grow gap-6">
     <h1 class="line-clamp-2 text-2xl font-semibold">
@@ -27,9 +29,7 @@
     </div>
     <div class="space-y-2 rounded-2xl bg-white text-sm">
       <h2 class="font-medium text-zinc-500">About this event</h2>
-      <p class="max-w-screen-md whitespace-pre-line">
-        <%= @event.description %>
-      </p>
+      <p class="max-w-screen-md whitespace-pre-line"><%= @event.description %></p>
     </div>
   </div>
 </div>
