fix bug with team list

--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -39,7 +39,10 @@
           |> Timex.format!("%b %e, %Y at %H:%M %p", :strftime) %>
         </span>
         <span class="inline-flex px-0.5">&bull;</span>
-        <span>Artistry JHB, Sandton Somewhere</span>
+        <span class="inline-flex gap-2">
+          Address not set
+          <.link class="underline text-zinc-400 hover:text-zinc-700">Update address</.link>
+        </span>
       </div>
     </div>
   </div>
@@ -61,6 +64,32 @@
 </div>
 
 <div class="grid gap-4">
+  <div class="border-l-4 border-yellow-400 bg-yellow-50 p-4">
+    <div class="flex">
+      <div class="flex-shrink-0">
+        <svg
+          class="h-5 w-5 text-yellow-400"
+          viewBox="0 0 20 20"
+          fill="currentColor"
+          aria-hidden="true"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495zM10 5a.75.75 0 01.75.75v3.5a.75.75 0 01-1.5 0v-3.5A.75.75 0 0110 5zm0 9a1 1 0 100-2 1 1 0 000 2z"
+            clip-rule="evenodd"
+          />
+        </svg>
+      </div>
+      <div class="ml-3">
+        <p class="text-sm text-yellow-700">
+          No address is setup for this event
+          <a href="#" class="font-medium text-yellow-700 underline hover:text-yellow-600">
+            Add an address
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="flex items-center justify-between">
     <h3 class="font-semibold">Tickets</h3>
     <button
