--- a/lib/gits_web/live/dashboard_live/team.html.heex
+++ b/lib/gits_web/live/dashboard_live/team.html.heex
@@ -21,19 +21,19 @@
       <div class="col-span-3 flex flex-wrap items-center gap-2 md:col-span-1">
         <img src="/images/placeholder.png" alt="" class="size-10 rounded-full" />
         <div class="flex items-center gap-2 text-sm">
-          <span class="font-medium"><%= member.user.display_name %></span>
+          <span class="font-medium"><%= member.display_name %></span>
           <span
-            :if={member.user.id == @current_user.id}
+            :if={member.actor?}
             class="ring-green-600/20 inline-flex items-center rounded-full bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset"
           >
             You
           </span>
         </div>
         <span class="pl-12 text-xs text-zinc-500 md:hidden">
-          <%= member.user.email %> &bull; <%= member.role |> Gits.role_to_readable_string() %>
+          <%= member.email %> &bull; <%= member.role |> Gits.role_to_readable_string() %>
         </span>
       </div>
-      <span class="hidden md:inline-flex"><%= member.user.email %></span>
+      <span class="hidden md:inline-flex"><%= member.email %></span>
       <span class="hidden items-center justify-self-start rounded-md bg-gray-100 px-1.5 py-0.5 text-xs font-medium text-gray-600 md:inline-flex">
         <%= member.role |> Gits.role_to_readable_string() %>
       </span>
