--- a/lib/gits_web/live/dashboard_live/event.html.heex
+++ b/lib/gits_web/live/dashboard_live/event.html.heex
@@ -103,6 +103,24 @@
       </div>
     </div>
   </div>
+
+  <div class="rounded-md bg-blue-50 p-4">
+    <div class="flex">
+      <div class="flex-shrink-0">
+        <.icon class="text-blue-400 -mt-1" name="hero-information-circle-mini" />
+      </div>
+      <div class="ml-3 flex-1 md:flex md:justify-between">
+        <p class="text-sm text-blue-700">
+          Add at least one ticket
+        </p>
+        <p :if={false} class="mt-3 text-sm md:mt-0 md:ml-6">
+          <a href="#" class="whitespace-nowrap font-medium text-blue-700 hover:text-blue-600">
+            Details <span aria-hidden="true"> &rarr;</span>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
   <div class="flex items-center justify-between">
     <h3 class="font-semibold">Tickets</h3>
     <button
