permission for unpublished events

--- a/lib/gits_web/live/event_live/feature.html.heex
+++ b/lib/gits_web/live/event_live/feature.html.heex
@@ -22,7 +22,7 @@
 <div class="min-h-96 mx-auto w-full max-w-2xl items-start gap-4 space-y-4 p-2 md:gap-12 md:pt-20 lg:flex lg:max-w-screen-lg lg:space-y-0 lg:p-0">
   <div class="grid gap-2">
     <div class="aspect-[3/2] relative mx-auto shrink-0 overflow-hidden rounded-2xl md:w-96 md:rounded-3xl">
-      <div class="size-12 border-zinc-200/40 text-white/80 bg-black/20 absolute top-2 left-2 flex shrink-0 flex-col items-center justify-center rounded-xl border *:leading-4 md:top-4 md:left-4">
+      <div class="size-12 border-zinc-200/40 text-white/80 bg-black/20 absolute top-2 left-2 z-10 flex shrink-0 flex-col items-center justify-center rounded-xl border *:leading-4 md:top-4 md:left-4">
         <span class="text-base font-semibold"><%= @starts_at_day %></span>
         <span class="text-xs"><%= @starts_at_month %></span>
       </div>
