--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -19,13 +19,13 @@
     </p>
     <div class="flex items-center gap-8 font-medium md:mx-auto md:justify-center">
       <.link
-        :if={FunWithFlags.enabled?(:get_started_button) or true}
+        :if={FunWithFlags.enabled?(:get_started_button)}
         class="border-2 rounded-lg border-zinc-600 dark:border-zinc-300 dark:text-zinc-100 p-2 px-4 hover:underline"
       >
         Get started
       </.link>
       <.link
-        :if={FunWithFlags.enabled?(:why_choose_button) or true}
+        :if={FunWithFlags.enabled?(:why_choose_button)}
         class="hover:underline dark:text-zinc-100"
       >
         Why choose <span class="font-black italic text-zinc-700 dark:text-zinc-200">GiTS</span>?
@@ -61,7 +61,7 @@
             alt=""
             class="size-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-110"
           />
-          
+
           <div class="size-12 absolute top-2 left-2 flex flex-col items-center justify-center rounded-xl bg-white text-zinc-800 shadow-md *:leading-4">
             <span class="font-semibold">
               <%= event.starts_at |> Timex.format!("%e", :strftime) %>
