--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -28,7 +28,7 @@
         <div class="aspect-[3/2] w-full overflow-hidden rounded-lg bg-zinc-200">
           <img
             src={Gits.Bucket.get_feature_image_path(ticket.event.account_id, ticket.event.id)}
-            alt=""
+            alt="feature image"
             class="object-cover"
           />
         </div>
@@ -72,7 +72,7 @@
       <div class="flex items-center gap-4 rounded-xl bg-white p-4 shadow-sm">
         <div class="flex items-center gap-1">
           <.icon name="hero-users-micro" class="text-zinc-500" />
-          <span class="text-sm">1</span>
+          <span class="text-sm"><%= ticket.instances |> Enum.count() %></span>
         </div>
         <span class="ring-green-600/20 inline-flex items-center rounded-full bg-green-50 px-2 py-1 text-xs font-medium text-green-700 ring-1 ring-inset">
           Available
