link back to home

--- a/lib/gits_web/controllers/auth_html/email_sent.html.heex
+++ b/lib/gits_web/controllers/auth_html/email_sent.html.heex
@@ -5,10 +5,7 @@
     </h2>
 
     <div class="flex max-w-screen-2xl gap-4 overflow-x-auto lg:flex-wrap lg:gap-9 lg:overflow-visible xl:gap-14">
-      <.link
-        href={@conn.params["return_to"]}
-        class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl"
-      >
+      <.link href="/" class="border-2 border-zinc-900 font-medium py-2 px-4 rounded-xl">
         Go homepage
       </.link>
     </div>
