--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -11,7 +11,7 @@
   <div>
     <div class="grid items-center gap-0.5">
       <div class="mx-auto flex w-80 gap-4 rounded-3xl bg-white p-6 shadow-sm">
-        <div class="aspect-[4/5] h-20 overflow-hidden rounded-lg bg-zinc-200">
+        <div class="aspect-[4/5] h-20 shrink-0 overflow-hidden rounded-lg bg-zinc-200">
           <img
             src={Gits.Bucket.get_listing_image_path(@event.account_id, @event.id)}
             alt="feature image"
