--- a/lib/gits_web/components/layouts/app.html.heex
+++ b/lib/gits_web/components/layouts/app.html.heex
@@ -1,5 +1,5 @@
 <.header user={@current_user} />
-<div class="mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white sm:min-h-[calc(100dvh-theme(space.40))]">
+<div class="min-h-[calc(100dvh-theme(space.40))] mx-auto flex w-full max-w-screen-xl grow flex-col justify-center gap-10 rounded-lg bg-white dark:bg-white">
   <%= @inner_content %>
 </div>
 <.footer />
