--- a/lib/gits_web/controllers/user_html/tickets.html.heex
+++ b/lib/gits_web/controllers/user_html/tickets.html.heex
@@ -51,10 +51,10 @@
           </div>
           <div class="flex w-full justify-between text-sm font-medium">
             <span>
-              <%= ticket.event.starts_at |> Timex.format!("%H:%M %p", :strftime) %>
+              <%= ticket.event.local_starts_at |> Timex.format!("%H:%M %p", :strftime) %>
             </span>
             <span>
-              <%= ticket.event.starts_at
+              <%= ticket.event.local_starts_at
               |> Timex.format!("%A, %e %b %Y", :strftime) %>
             </span>
           </div>
