--- a/lib/gits_web/controllers/page_html/home.html.heex
+++ b/lib/gits_web/controllers/page_html/home.html.heex
@@ -54,6 +54,7 @@
           class="aspect-[4/5] group relative shrink-0 overflow-hidden rounded-2xl shadow-sm w-56"
         >
           <img
+            loading="eager"
             src={Gits.Bucket.get_listing_image_path(event.account_id, event.id)}
             alt=""
             class="size-full object-cover transition-transform duration-300 ease-in-out group-hover:scale-110"
