--- a/lib/gits_web/controllers/user_html/ticket.html.heex
+++ b/lib/gits_web/controllers/user_html/ticket.html.heex
@@ -15,7 +15,7 @@
           <img
             src={Gits.Bucket.get_listing_image_path(@event.account_id, @event.id)}
             alt="feature image"
-            class="w-full object-cover"
+            class="h-full w-full object-cover"
           />
         </div>
         <div class="grid gap-2">
